# nmdc_automation

./: .gitignore  Dockerfile  README.md  README_developers.md  check_downstream.py  pyproject.toml
.github/workflows/: blt.yml  build-and-push-image.yml
app/api/: dependencies.py
app/backend/: main.py
app/schemas/: record.py
configs/: import-mt.yaml  import.yaml  import_all.yaml  napa_user_config.toml  project_config.original.toml  site_configuration.toml  staging_configuration.toml  workflows.yaml
data_management/: README  README.md  config.yaml  jamo_import.sh  jamo_ingest.py  populate_import_history.py  workflow_labels.json
docs/: README_Importing.md  README_Slurm.md  README_developers.md  README_troubleshooting.md
src/: generate_functional_agg.py  generate_metap_agg.py
test_data/: afile.sha256
tests/: conftest.py  db_dict.json  import-all.yaml  import-mt.yaml  import_all.yaml  import_test.yaml  site_configuration_test.toml  staging_configuration_test.toml  test_activities.py  test_base.py  test_config.py  test_file_metadata.py  test_file_restoration.py  test_globus_file_transfer.py  test_import_mapper.py  test_jaws_api_integration.py  test_linkml-validate.py  test_mapping_tsv.py  test_metag.py  test_metap.py  test_models.py  test_nmdc_workflow_inputs_integration.py  test_nmdcapi.py  test_sched.py  test_staged_files.py  test_versioning.py  test_watch_nmdc.py  test_wfutils.py  test_workflow_process.py
wdl/: assembly_stats.wdl  assembly_stats_label_mapping.csv  imported_assembly_stats.wdl  run_assembly_stats.sh  run_imported_assembly_stats.sh
(+166 files in other folders)
